deploy/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/force-ssl-redirect: "true"
    networking.gke.io/managed-certificates: "configuration-certificate"
    kubernetes.io/ingress.global-static-ip-name: "configuration-production-ip"
  name: configuration-ingress
spec:
  rules:
  - host: configuration.bootifulpodcast.fm
    http:
      paths:
      - backend:
          serviceName: configuration
          servicePort: 80
